tester/testsuite/bad/bad071.jl
// return type must be int
void main() {
    return 0;
}
